appId: com.zitch.app
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Skip"
    timeout: 20000
- tapOn: "Skip"
- assertVisible: "Welcome back"
- assertVisible: "Phone number"
- assertVisible: "Password"
- tapOn: "Sign in"
- assertVisible: "Phone cannot be empty"
- tapOn: "OK"
